--- a/telas_finais/contato.html
+++ b/telas_finais/contato.html
@@ -101,9 +101,11 @@
     </div>
     <br>
     <section id="contato_forms">
+     
         <div class="text-center">
-            <h2>Entre em Contato</h2>
-            <p class="form">Quer saber mais? Preencha o formulário para entrarmos em contato</p>
+            <h2 class="t_ctt">Entre em Contato</h2>
+            <div class="texto_ctt1">Whatsapp (11) 9 9757-9540 </div>
+            <div class="texto_ctt2">Email: passatempoeducativo.org.br </div>
         </div>
         <section id="=contato_midias">
             <div class="container-fluid contato_midia">
@@ -162,6 +164,9 @@
                 </div>
             </div>
         </section>
+        <div class="text-center mt-4">
+            <p class="form">Quer saber mais? Preencha o formulário para entrarmos em contato</p>
+        </div>
         <div class="container-fluid">
             <div class="container-fluid formulario">
                 <form action="">
@@ -213,7 +218,10 @@
                 </form>
             </div>
         </div>
+
+
         <br><br><br><br>
+
         <footer class="fixed">
             <div class="container-fluid rodape">
                 <div class="row justify-content-around align-items-center row_rodape g-3">
