--- a/telas_finais/home.html
+++ b/telas_finais/home.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary btn-lg" data-bs-dismiss="modal" aria-label="close" onclick="dropImagens()">Fechar</button>
-                    <button class="btn btn-primary btn-lg" onclick="selecionarImagem()">Selecionar</button>
+                    <button class="btn btn-primary btn-lg" data-bs-dismiss="modal" aria-label="close" onclick="selecionarImagem()">Selecionar</button>
                     <button class="btn btn-danger btn-lg" onclick="removerImagem()">Remover</button>
                     <form id="form">
                         <label for="file" class="custom-file-button" id="botaoUpload">Upload</label>
