--- a/telas_finais/tutorial.html
+++ b/telas_finais/tutorial.html
@@ -93,7 +93,7 @@
         
         <main class="container-fluid d-flex flex-column align-items-center justify-content-center">
             <video width="80%" controls class="mt-3">
-                <source src="video/tutorial_bom.mp4" type="video/mp4">
+                <source src="video/tutorial.mp4" type="video/mp4">
                 Seu navegador não suporta o formato de vídeo.
             </video>
         </main>
