--- a/telas_finais/Pop-up Cookies.html
+++ b/telas_finais/Pop-up Cookies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consentimento de Cookies</title>
-    <link rel="stylesheet" href="pop-up.css">
+    <link rel="stylesheet" href="css/pop-up.css">
     
 </head>
 <body>
