--- a/telas_finais/home.html
+++ b/telas_finais/home.html
@@ -120,22 +120,22 @@
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img class="d-block w-100 img_carrossel"  id="imagem1">
+                            <img class="d-block w-100 img_carrossel" src="image/aniversario.jpeg" id="imagem1">
                           </div>
                           <div class="carousel-item">
-                            <img class="d-block w-100 img_carrossel"  id="imagem2">
+                            <img class="d-block w-100 img_carrossel" src="image/aniversario.jpeg" id="imagem2">
                           </div>
                           <div class="carousel-item">
-                            <img class="d-block w-100 img_carrossel" id="imagem3">
+                            <img class="d-block w-100 img_carrossel" src="image/aniversario.jpeg"id="imagem3">
                           </div>
                         </div>
                       </div>
                 </div>
                  <div class="col-sm-10 col-lg-5 col_texto_carrossel ">
     
-                   <h1 id="texto1"></h1>
-                   <h1 id="texto2"></h1>
-                   <p id="texto3"></p>
+                   <h1 id="texto1">Passatempo Educativo</h1>
+                   <h1 id="texto2">Eventos</h1>
+                   <p id="texto3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam maxime dolore, laboriosam, harum nostrum quo expedita tempora, nihil soluta eveniet iste laudantium ea cupiditate pariatur sint similique cum facere recusandae?</p>
                    <a href="#texto4" class="btn btn-light botao_carrossel text-center w-50"><b>Conheça</b></a>
                 </div>
             </div>
@@ -153,7 +153,7 @@
     
     <article class="container-fluid servicos">
         <header class="text-center mb-4">
-          <h1 class="fancy" id="texto4"></h1>
+          <h1 class="fancy" id="texto4">Nossos Serviços</h1>
         </header>
         <br>
         <br>
@@ -181,10 +181,10 @@
                             <path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5z"/>
                             <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
                           </svg>
-                        <h5 class="card-title mt-3" id="texto7"></h5>
+                        <h5 class="card-title mt-3" id="texto7">lorem</h5>
                     </div>
                     <div class="card-body">
-                        <p class="card-text" id="texto8"></p>
+                        <p class="card-text" id="texto8">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi, quae accusantium omnis recusandae accusamus voluptatem saepe dolorem tempora tempore voluptatum in veritatis unde ratione, quam, nihil quod laudantium blanditiis nesciunt.</p>
                         <a href="eventos.html" class="btn btn-secondary botao_card w-100">Conhecer Eventos</a>
                     </div>
                 </div>
