--- a/telas_finais/Pop-up Cookies.html
+++ b/telas_finais/Pop-up Cookies.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="cookiePopup" class="cookie-popup">
-        <p>Usamos cookies para melhorar a experiência do usuário. Para mais informações, veja nossos <a href="recursos/Termos de Uso - Passatempo Educativo.pdf" style="color: #FFD700;">Termos de Uso</a>.</p>
+        <p>Usamos cookies para melhorar a experiência do usuário. Para mais informações, veja nossos <a href="recursos/Termos de Uso - Passatempo Educativo.pdf">Termos de Uso</a>.</p>
         <button onclick="acceptCookies()">Concordo</button>
         <button onclick="declineCookies()">Recusar</button>
     </div>
