--- a/telas_finais/home.html
+++ b/telas_finais/home.html
@@ -123,10 +123,10 @@
                             <img class="d-block w-100 img_carrossel" src="image/aniversario.jpeg" id="imagem1">
                           </div>
                           <div class="carousel-item">
-                            <img class="d-block w-100 img_carrossel" src="image/aniversario.jpeg" id="imagem2">
+                            <img class="d-block w-100 img_carrossel" src="image/Home.jpeg" id="imagem2">
                           </div>
                           <div class="carousel-item">
-                            <img class="d-block w-100 img_carrossel" src="image/aniversario.jpeg"id="imagem3">
+                            <img class="d-block w-100 img_carrossel" src="image/corporativo.jpg"id="imagem3">
                           </div>
                         </div>
                       </div>
@@ -165,10 +165,10 @@
                             <title>Ícone de uma chave de fenda e uma chave combinada cruzadas formando um "X" </title>
                             <path d="M1 0 0 1l2.2 3.081a1 1 0 0 0 .815.419h.07a1 1 0 0 1 .708.293l2.675 2.675-2.617 2.654A3.003 3.003 0 0 0 0 13a3 3 0 1 0 5.878-.851l2.654-2.617.968.968-.305.914a1 1 0 0 0 .242 1.023l3.27 3.27a.997.997 0 0 0 1.414 0l1.586-1.586a.997.997 0 0 0 0-1.414l-3.27-3.27a1 1 0 0 0-1.023-.242L10.5 9.5l-.96-.96 2.68-2.643A3.005 3.005 0 0 0 16 3q0-.405-.102-.777l-2.14 2.141L12 4l-.364-1.757L13.777.102a3 3 0 0 0-3.675 3.68L7.462 6.46 4.793 3.793a1 1 0 0 1-.293-.707v-.071a1 1 0 0 0-.419-.814zm9.646 10.646a.5.5 0 0 1 .708 0l2.914 2.915a.5.5 0 0 1-.707.707l-2.915-2.914a.5.5 0 0 1 0-.708M3 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026z"/>
                         </svg>
-                        <h5 class="card-title mt-3" id="texto5"></h5>
+                        <h5 class="card-title mt-3" id="texto5">Oficinas</h5>
                     </div>
                     <div class="card-body">
-                        <p class="card-text" id="texto6"></p>
+                        <p class="card-text" id="texto6">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis nemo voluptatum fugit earum saepe sed odio possimus hic atque magni dignissimos architecto, sit aut ducimus, non placeat provident sequi cum?</p>
                         <a href="oficinas.html" class="btn btn-secondary botao_card w-100">Conhecer Oficinas</a>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
                             <path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5z"/>
                             <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
                           </svg>
-                        <h5 class="card-title mt-3" id="texto7">lorem</h5>
+                        <h5 class="card-title mt-3" id="texto7">Eventos</h5>
                     </div>
                     <div class="card-body">
                         <p class="card-text" id="texto8">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi, quae accusantium omnis recusandae accusamus voluptatem saepe dolorem tempora tempore voluptatum in veritatis unde ratione, quam, nihil quod laudantium blanditiis nesciunt.</p>
@@ -197,10 +197,10 @@
                             <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053.918 3.995.78 5.323 1.508 7H.43c-2.128-5.697 4.165-8.83 7.394-5.857q.09.083.176.171a3 3 0 0 1 .176-.17c3.23-2.974 9.522.159 7.394 5.856h-1.078c.728-1.677.59-3.005.108-3.947C13.486.878 10.4.28 8.717 2.01zM2.212 10h1.315C4.593 11.183 6.05 12.458 8 13.795c1.949-1.337 3.407-2.612 4.473-3.795h1.315c-1.265 1.566-3.14 3.25-5.788 5-2.648-1.75-4.523-3.434-5.788-5"/>
                             <path d="M10.464 3.314a.5.5 0 0 0-.945.049L7.921 8.956 6.464 5.314a.5.5 0 0 0-.88-.091L3.732 8H.5a.5.5 0 0 0 0 1H4a.5.5 0 0 0 .416-.223l1.473-2.209 1.647 4.118a.5.5 0 0 0 .945-.049l1.598-5.593 1.457 3.642A.5.5 0 0 0 12 9h3.5a.5.5 0 0 0 0-1h-3.162z"/>
                           </svg>
-                          <h5 class="card-title mt-3" id="texto9"></h5>
+                          <h5 class="card-title mt-3" id="texto9">Saude e bem estar</h5>
                     </div>
                     <div class="card-body">
-                        <p class="card-text" id="texto10"></p>
+                        <p class="card-text" id="texto10">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos ipsa id error ratione mollitia optio corporis architecto officiis minima voluptatem dolore, distinctio accusantium accusamus sunt cum nihil, dignissimos nam doloribus!</p>
                         <a href="saude.html" class="btn btn-secondary botao_card w-100">Conhecer  Saúde</a>
                     </div>
                 </div>
