--- a/telas_finais/contato.html
+++ b/telas_finais/contato.html
@@ -24,7 +24,7 @@
 
 <body>
 
-     começo vlibras 
+     <!-- começo vlibras  -->
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
         <div vw-plugin-wrapper>
