--- a/telas_finais/contato.html
+++ b/telas_finais/contato.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/contato.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="icon" type="image/x-icon" href="image/Logo Passatempo.png">
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
