--- a/telas_finais/contato2.html
+++ b/telas_finais/contato2.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/modal.css">
     <link rel="stylesheet" href="css/pop-up.css">
-
+    <link rel="icon" type="image/x-icon" href="image/Logo Passatempo.png">
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
