--- a/telas_finais/galeria.html
+++ b/telas_finais/galeria.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/galeria.css">
+    <link rel="icon" type="image/x-icon" href="image/Logo Passatempo.png">
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
