--- a/telas_finais/login.html
+++ b/telas_finais/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="icon" type="image/x-icon" href="image/Logo Passatempo.png">
 
 
 
