--- a/telas_finais/contato.html
+++ b/telas_finais/contato.html
@@ -22,10 +22,17 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="../js/inserir_navabar.js"></script>
+    <script src="../js/checar_status_login.js"></script>
+    <script src="../js/sair.js"></script>
 </head>
 
 
-<body>
+<body onload="inserirNavbar()">
 
      <!-- começo vlibras  -->
     <div vw class="enabled">
@@ -56,27 +63,6 @@
                     </div>  
                     <div class="offcanvas-body">
                         <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1 text-center">
-                            <li class="nav-item  navegacao_item">
-                                <a class="nav-link  navegacao_link" aria-current="page" href="home.html">Home</a>
-                            </li>
-                            <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="oficinas.html">Oficinas</a>
-                            </li>
-                            <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="eventos.html">Eventos</a>
-                            </li>
-                            <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="saude.html">Saúde e Bem-Estar</a>
-                            </li>
-                            <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="galeria.html">Galeria</a>
-                            </li>
-                            <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link active" href="contato.html">Contato</a>
-                            </li>
-                            <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="login.html">Admin</a>
-                            </li>
                         </ul>
                     </div>
                 </div>
@@ -337,12 +323,5 @@
 
         </script>
         <br>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-
-            
-        <body>
 
 </html>
