--- a/telas_finais/galeria.html
+++ b/telas_finais/galeria.html
@@ -21,7 +21,7 @@
 
 
 </head>
-<body>
+<body onload="inserirNavbar()">
     <header>
         <nav class="navbar navbar-expand-lg fixed">
             <div class="container-fluid">
@@ -207,8 +207,11 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/galeria.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="../js/checar_status_login.js"></script>
+    <script src="../js/inserir_navabar.js"></script>
+    <script src="../js/galeria.js"></script>
+    <script src="../js/sair.js"></script>
 
 </body>
 </html>
