--- a/telas_finais/login.html
+++ b/telas_finais/login.html
@@ -24,7 +24,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body  onload="checarStatusLogin()">
+<body onload="alternarPagina()">
 
     <header>
         <nav class="navbar navbar-expand-lg fixed">
@@ -166,5 +166,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="../js/login.js"></script>
+  <script src="../js/checar_status_login.js"></script>
 </body>
 </html>
