--- a/telas_finais/tela_admin.html
+++ b/telas_finais/tela_admin.html
@@ -23,7 +23,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body onload="teste()">
+<body>
 
     <header>
         <nav class="navbar navbar-expand-lg fixed">
@@ -48,7 +48,7 @@
                                 <a class="nav-link navegacao_link" href="oficinas.html">Oficinas</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="eventos.html">Eventos Sociais</a>
+                                <a class="nav-link navegacao_link" href="eventos.html">Eventos</a>
                             </li>
                             <li class="nav-item navegacao_item">
                                 <a class="nav-link navegacao_link" href="saude.html">Saúde e Bem-Estar</a>
@@ -201,6 +201,6 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="../js/adm.js"></script>
+  <script src="../js/sair.js"></script>
 </body>
 </html>
